Prevent columns from moving around on mobile
Console min width 900px and the three columns below are inline-blocks without wrapping

--- a/interface.css
+++ b/interface.css
@@ -307,26 +307,39 @@ canvas {
   float: left;
   background: black;    
   width: 100%;
+  min-width: 900px;
 }
 
 #topDIv {
   float: left;
+  white-space: nowrap;
   width: 100%;
 }
 
+#containerColumns { 
+  float: left; 
+  white-space: nowrap;
+}
+
 #leftColumn {
-  float: left ;
+  display: inline-block;
+  vertical-align:top;
+  white-space: normal;
   width: 275px;
 }
 
 #middleColumn {
-  float: left;
+  display: inline-block;
+  vertical-align:top;
+  white-space: normal;
   width: 275px;
   margin-left: 10px;
 }
 
 #rightColumn {
-  float: left;
+  display: inline-block;
+  vertical-align:top;
+  white-space: normal;
   width: 320px;
   margin-left: 10px;    
 }
